--- a/hc-01-Recap/3-list.html
+++ b/hc-01-Recap/3-list.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>UNORDORED LİST</h1>
-    <h2>Sıralı olmayan liste</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>List</title>
+</head>
+<body>
+    <h1>LIST</h1>
+    <h2>Unordered List - Sıralı olmayan liste</h2>
+    <p>Sırasız listeler, maddeleri nokta veya diğer simgelerle listelemek için kullanılır. İşte bir sırasız liste örneği:</p>
     <ul type="none">
-      <li>😍HTML</li>
-      <li>💕css</li>
-      <li>👌Jacascript</li>
+        <li>👶HTML</li>
+        <li>👶CSS</li>
+        <li>👵Javascript</li>
     </ul>
-    <h2>Sıralı Liste</h2>
-    <ol type="1">
-      <li>Futbol</li>
-      <li>Basketbol</li>
-      <li>Voleybol</li>
+    <hr>
+    <h2>Ordered List - Sıralı  liste</h2>
+
+    <ol type="" start="5" reversed>
+        <li>kurabiye</li>
+        <li>ıslak kek</li>
+        <li>kuruyemiş</li>
     </ol>
-    <h2>Açıklama listesi</h2>
+    <hr>
+    <h2>Description List - AÇıklama Listeleri</h2>
+    <!-- dl : desc. List, dt: desc.title, dd:desc.data -->
     <dl>
-      <dt>Futbol Nedie</dt>
-      <dt>Basketbol Nedir</dt>
+        <dt>Islak Kek nedir</dt>
+        <dd>Sosla ıslatılmış kek</dd>
     </dl>
-  </body>
+
+</body>
 </html>
