--- a/hc-01-Recap/2-formatting_elements.html
+++ b/hc-01-Recap/2-formatting_elements.html
@@ -6,59 +6,26 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>FORMATTING ELEMENTS</h1>
     <p>
-        <i>
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum libero
-          ipsam et mollitia? Animi nemo omnis voluptates inventore debitis
-          assumenda qui iste, velit voluptatibus rerum. Dolore, vitae alias
-          possimus recusandae esse atque pariatur molestias, minima adipisci eaque
-          incidunt obcaecati eveniet ipsum earum veniam laborum qui, quos officia
-          doloremque temporibus libero asperiores eos. Voluptate veniam, iste
-          perspiciatis, debitis dolor quam obcaecati reiciendis mollitia, nesciunt
-          animi amet alias. Consectetur, laborum. Esse quos reiciendis laborum
-          rerum recusandae labore, animi quasi aliquam assumenda explicabo fugiat
-          sapiente officiis ullam.
-          <b>Illo excepturi rerum delectus iste saepe officiis.</b> <br />Esse
-          ipsam quos placeat doloremque atque aspernatur laborum nostrum nobis
-          dicta, earum quidem numquam perferendis libero! Sapiente ipsam omnis
-          quam ex facere necessitatibus accusantium, iusto repr henderit, cumque
-          quidem temporibus soluta asperiores cum sit odit aspernatur doloribus
-          ullam minima qui beatae! Sint dolores atque placeat eveniet aspernatur
-          adipisci, dolore animi saepe architecto veritatis itaque in consequuntur
-          distinctio ullam optio necessitatibus ipsa quisquam deleniti aliquam
-          aliquid doloremque veniam esse repudiandae!
-          <strong>Praesentium eius distinctio ipsum repellendus nobis!</strong>
-          <br />Unde veritatis illo enim fugit distinctio eveniet alias ipsum
-          officia tempora minima iusto officiis voluptate nostrum harum velit, eum
-          debitis earum quidem vero necessitatibus culpa eaque assumenda nisi.
-          Aspernatur atque voluptate perspiciatis facilis sit ab aliquid hic
-          assumenda deleniti molestias ad voluptatem vero nesciunt quisquam
-          asperiores consequatur dignissimos, quibusdam velit. Officiis dolorum,
-          voluptatum, exercitationem ipsa illo inventore sequi voluptates autem
-          eos aut beatae natus libero aspernatur fugiat architecto. Qui ex, ullam
-          asperiores possimus, a accusantium fuga voluptate nam suscipit eos
-        </i>
+        Yapay zeka teknolojisi nasıl gelişti?
+       <strong>Alan Turing</strong> , 1950 tarihli <b>"Bilgisayar Mekanizması ve Zeka"</b>    adlı ufuk açıcı makalesinde makinelerin düşünüp düşünemeyeceğine değindi. Bu <i>makalede Turing,</i>  yapay zeka terimini bir ilk olarak ortaya attı ve bunu <em>teorik ve felsefi</em>  bir kavram olarak sundu.
+        <br>
+        
+       <u>1957 ve 1974 yılları arasında</u>  bilgi işlem alanındaki gelişmeler bilgisayarların daha fazla veri depolamasına ve daha hızlı işlemesine olanak sağladı. Bu dönemde bilim adamları makine öğrenimi (ML) algoritmalarını daha da geliştirdiler. Bu alandaki ilerleme, <small>Savunma Gelişmiş Araştırma Projeleri Ajansı</small>  (DARPA) gibi ajansları yapay zeka araştırması için fon oluşturmaya yönlendirdi. İlk başta, bu araştırmanın temel amacı, bilgisayarların konuşma dilini yazıya dökerek çevirip çeviremeyeceğini keşfetmekti.
+        <br>
+        1980'ler boyunca, mevcut artırılmış fonlar ve bilim insanlarının yapay zekada kullandığı gittikçe genişleyen algoritmik araç seti sayesinde geliştirme süreçleri kolaylaştı. <mark style="background-color:rgb(118, 247, 6)">David Rumelhart </mark>  ve John Hopfield, bilgisayarların deneyimlerden öğrenebileceğini gösteren derin öğrenme teknikleri üzerine makaleler yayınladılar. 
+        <br>
+        Bilim insanları, yapay zekaya yönelik olarak 1990'dan 2000'lerin başına kadar, o zamanki dünya satranç şampiyonunu yenmek gibi birçok temel hedefe ulaştılar. Modern çağda önceki on yıllara kıyasla daha fazla bilgi işlem verisi ve işlem gücü olması sayesinde, yapay zeka araştırmaları artık daha yaygın ve erişilebilir. Hızlı bir şekilde yapay genel zekaya dönüşüyor ve böylece yazılımların karmaşık görevleri yerine getirebilmesini sağlıyor. Yazılım, daha önce sadece insanlarla sınırlı görevler olan karar verme ve kendi başına öğrenme işlevlerini yerine getirebiliyor.  
+        <br>
+        <p>   
+            E = mc<sup>2</sup>
+            <br>
+            H<sub>2</sub>O
         </p>
-      </i>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam corporis consequatur cum laudantium expedita pariatur ipsum veritatis tempora exercitationem ab rerum, animi laboriosam, et eligendi eum adipisci dolores odit explicabo officia. Exercitationem voluptatem enim ipsum accusantium, nobis fuga veritatis obcaecati quos nostrum? <em>Amet excepturi quaerat velit! Dolor sit amet reprehenderit! Perferendis at rerum dicta quis eos voluptate voluptates illum odio neque aliquam, labore totam dignissimos, beatae explicabo odit aut a optio unde. Aut aperiam, omnis nisi repudiandae quis impedit commodi, rerum delectus illum dolores repellat laboriosam beatae expedita optio dicta ex perspiciatis amet cum et. Iste atque eos nostrum odio?</em></p>
-        <br>
-      <p> <i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ut, exercitationem cum, vitae culpa reiciendis distinctio inventore adipisci assumenda, fugiat voluptate aliquid vero repudiandae beatae! Laborum, recusandae quas. Maiores alias assumenda illo iure! Ad numquam eum, atque esse error odio quis, fuga dolorem facilis illum nemo molestias cum incidunt repudiandae.</i>
-       </p>
-  
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam! Est aliquid sunt modi deleniti assumenda dolorum eius iusto voluptates vero aspernatur dolores perferendis autem, consequuntur quidem dolore? Tempora eaque blanditiis minima at necessitatibus accusantium est dolores. <br> 
-        <small>Sit, corrupti quidem! Quo dicta sapiente sint quas natus temporibus sunt, quidem debitis.</small>
-       </p>
-       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero optio exercitationem ut ducimus velit aliquam rem, numquam ea tempore veniam repudiandae perspiciatis hic incidunt quae error vitae tempora omnis consequatur aperiam in corrupti illum similique atque consectetur! Odit architecto asperiores aliquid, deleniti voluptas quibusdam possimus necessitatibus non ad, inventore quae sed rem ipsa rerum voluptate facere. Ipsum ipsam maiores, reiciendis error odio praesentium omnis ad laborum repudiandae temporibus possimus fugit at rerum eum dolorum voluptate non, labore corporis commodi. Libero magni, eveniet facilis quasi nostrum nulla et voluptatem, animi vel eum expedita labore obcaecati ullam sed tempore, veniam numquam ipsam quam tempora illum nobis consequatur commodi sit ipsa. <u>Cumque ipsa sint sequi animi quos dolor quam impedit rem hic blanditiis, distinctio quo eum ut eius suscipit officia necessitatibus, alias, voluptas in omnis modi et nisi?</u> Quidem hic voluptates voluptatem excepturi beatae, numquam ad mollitia culpa eius cum enim, recusandae aliquid optio similique ab. Voluptatem officiis ut corporis facere blanditiis neque aspernatur ipsa quas quia illo eaque tempore, possimus quasi! Inventore praesentium impedit facere alias blanditiis dolorem, beatae fuga! Soluta porro ipsam a corrupti tempora dolore eaque aliquam nesciunt id minus magni deleniti, mollitia alias excepturi, sint ut nostrum, molestiae expedita voluptatem vitae. <mark>Et dignissimos tempore odio facilis eos modi fugiat rerum reprehenderit quas minima neque ipsum culpa quis repudiandae, fugit distinctio at? Porro, soluta necessitatibus enim fugiat deserunt sunt corporis eos nemo vitae asperiores qui dolores repellendus at? Doloremque repudiandae totam laborum unde sit veritatis ipsam exercitationem nihil, dolores, quia, eveniet voluptates rem nemo repellat! Esse, quod sed.</mark> Impedit repellat assumenda unde et quae animi ratione! Distinctio mollitia, officia libero molestias inventore maiores, beatae doloribus nemo, ratione itaque reiciendis. Ut, laboriosam fugiat! Rem, tempore sequi minus aliquam optio non similique assumenda, blanditiis exercitationem nam error numquam quas ad nobis quia consequatur at quae vel sint vitae. <mark style="background-color: blue;">Aspernatur obcaecati expedita repellendus ut? Sit soluta itaque eaque quae sint nobis consequuntur officiis maiores. Quos in beatae quidem voluptates voluptate quam eos architecto impedit aperiam quia tempore tempora amet placeat eligendi suscipit laboriosam ab, saepe, dolores nihil esse accusamus.</mark> Delectus, sequi nisi eos dolorem rerum accusantium dicta corrupti fugiat odit ipsa quas. Autem labore maiores, maxime laudantium ea doloribus asperiores facere? Saepe totam praesentium odio facilis tenetur repellendus. Libero quia recusandae ut ab deserunt ea mollitia excepturi dolor fugit. A nesciunt consectetur earum quas corrupti nisi eveniet repudiandae maiores consequuntur voluptatem beatae, odit cupiditate dignissimos sunt. Quam repellat eaque, officiis corrupti natus molestiae placeat unde corporis doloremque ipsum assumenda harum repudiandae illum dolorum saepe est facere. Temporibus quae explicabo, debitis dolor corporis sit illum adipisci facere eaque distinctio doloremque facilis possimus sequi rerum sapiente alias at. In rerum aperiam fugit, placeat dolor cumque illum, ipsum ex expedita ea maxime alias molestiae explicabo laboriosam doloremque facilis fugiat exercitationem tenetur? Dolor consectetur iusto tempore saepe repellat mollitia earum rem, cum minus voluptates nostrum, ipsa, quam quasi placeat consequatur cupiditate veritatis nulla! Ratione soluta expedita cumque, voluptatibus assumenda libero, quidem non sapiente consequuntur unde perspiciatis! Deserunt!</p>
-      </p>
-      <p>
-        E=mC <sup>2</sup>
-        <br>
-        H<sub>2</sub>O
         <p>
-          Kıyafetlerimiz artık <del>500$</del> değil 300$ dolar.
+           <del>500$</del>300$
         </p>
-      </p>
-    </body>
-  </html>
+    </p>
 </body>
 </html>
