--- a/hc-01-Recap/6-div-span.html
+++ b/hc-01-Recap/6-div-span.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline Ve Block</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1>INLINE VE BLOCK</h1>
-    <!-- HER ELEMENTİN BİR ÖZELLLİĞİ VARDIR. Bu Iline ve blok element olma özelliği -->
-    <h2>Inline Element</h2>
-    <img src="./IMAGE/images.jpg" alt="" width="700px" />
-    <!-- en meşhr block elementimiz DIV (division) bölüm oluşturma amaçlı -->
-     <div style="background-color: cornflowerblue;">    
-        <!-- sitil ayarı -->
-        <h3>prison break</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eum quibusdam labore veniam vero quidem tempore, asperiores consequuntur et. Voluptates officiis illum facere autem molestiae? Ab dolor vitae, hic perferendis libero voluptas iusto iure, numquam modi perspiciatis quae sed enim natus assumenda adipisci sapiente? Provident amet eum possimus distinctio assumenda.</p>
-     </div>
-     <!-- en meşhur inline elementimiz span  -->
-      <p style="background-color: chocolate;">merhaba <span style="background-color: green;">ch18</span></p>
-      <!-- span yazılmazsa boyalı alanın içinde kalmıyor . p tagı ile yazınca aşağı atıyor -->
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- her elementin bir özelliği vardır: Inline ve blok element olma özelliği -->
+     <h2>Inline Element</h2>
+     <img src="./images/Game-of-Thrones-Legends-Artwork-900x900.jpg" alt="" width="200px">
+    <img src="https://picsum.photos/id/655/600/400" alt="" width="200px">
+    <img src="https://picsum.photos/id/255/600/400" alt="" width="300px">
 
-  </body>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi vitae blanditiis sit rem consequatur repellendus beatae doloribus consequuntur repudiandae itaque.
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptates cum quo inventore temporibus autem ab sit fuga corrupti, dolore ipsum incidunt. Aliquam perspiciatis labore iure reiciendis ex, iusto voluptatibus.</p>
+
+    <!-- en meşhur block elementimiz DIV (division) bölüm oluşturma amaçlı-->
+     <div style="background-color:cornflowerblue">
+        <h3>Prison break</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ullam, perspiciatis repellendus numquam mollitia at consequuntur error nam. Vel tenetur placeat, fugiat tempora soluta molestiae maiores debitis numquam fugit deleniti animi amet corrupti nostrum cupiditate modi dolorem architecto beatae quibusdam, impedit ipsa asperiores quis, aut quaerat quas? Veniam, voluptates modi?</p>
+     </div>
+<!-- en meşhur inline elementimiz span  -->
+ <p style="background-color:chocolate">Merhaba <span style="background-color:green;border:2px solid red">CH18</span> </p>
+
+</body>
 </html>
