--- a/hc-09-FlexBox-project/index.html
+++ b/hc-09-FlexBox-project/index.html
@@ -74,6 +74,145 @@
             </ul>
         </div>
 
+        <!-- ------------------------------- -->
+        <!--             HEADER              -->
+        <!-- ------------------------------- -->
+
+        <header>
+            <div class="essential">
+                <div class="essential-text">
+                    <p>Furniture essentials to a functional home design</p>
+                </div>
+                <div class="sofa">
+                    <img src="./images/sofa.png" alt="">
+                </div>
+            </div>
+
+            <div class="lighting">
+                <p class="light">
+                    Why is lighting is important in design
+                </p>
+                <img src="./images/armchair.png" alt="">
+            </div>
+        </header>
+
+        <!-- ------------------------------- -->
+        <!--            CATEGORY             -->
+        <!-- ------------------------------- -->
+
+        <div class="categorySection">
+            <div class="categoryPart">
+                <p>Browse by Category</p>
+
+                <div class="categories">
+                    <div class="category">
+                        <p>Living Room</p>
+                        <img src="./images/living-room.jpg" alt="">
+                    </div>
+                    <div class="category">
+                        <p>Kitchen</p>
+                        <img src="./images/kitchen.jpg" alt="">
+                    </div>
+                    <div class="category">
+                        <p>Bedroom</p>
+                        <img src="./images/bedroom.jpg" alt="">
+                    </div>
+                    <div class="category">
+                        <p>Accessories</p>
+                        <img src="./images/accesories.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- ------------------------------- -->
+        <!--             PRODUCT             -->
+        <!-- ------------------------------- -->
+
+        <div class="productSection">
+            <div class="productPart">
+                <p>Browse by Product</p>
+
+                <div class="products">
+                    <div class="product">
+                        <img src="./images/bed.jpg" alt="">
+                        <p>Beds</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/linen.jpeg" alt="">
+                        <p>Linens</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/carpet.jpg" alt="">
+                        <p>Carpets & Rugs</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/shelfs.jpg" alt="">
+                        <p>Shelfs & Bookcases</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/dining-table.jpg" alt="">
+                        <p>Dining Table</p>
+                    </div>
+                    <div class="product">
+                        <img src="./images/kids.jpg" alt="">
+                        <p>Kids Room</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- ------------------------------- -->
+        <!--             CONTACT             -->
+        <!-- ------------------------------- -->
+
+        <div class="contact">
+            <div class="expert">
+                <p class="lookforExpert">
+                    Looking for expert guidance to design <span>your home?</span> 
+                </p>
+                <p class="leaveInfo">
+                    Leave your information here and receive consultation with our interior design experts. 
+                </p>
+            </div>
+
+            <div class="formSection">
+                <form action="" method="get">
+                    <div class="formElement name">
+                        <label for="name">Full Name*</label>
+                        <input type="text" id="name" required>
+                    </div>
+                    <div class="formElement email">
+                        <label for="email">Email*</label>
+                        <input type="email" id="email" required>
+                    </div>
+                    <div class="formElement phone">
+                        <label for="tel">Phone Number*</label>
+                        <input type="tel" id="tel">
+                    </div>
+
+                    <button type="submit" class="submit" required>Send</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- ------------------------------- -->
+        <!--             FOOTER              -->
+        <!-- ------------------------------- -->
+
+        <footer>
+            <div class="copyright">
+                <p>
+                    ©2024.All Rights Reserved by Harvey
+                </p>
+            </div>
+
+            <div class="policy">
+                <a href="">Privacy Policy</a>
+                <a href="">Terms of Service</a>
+            </div>
+        </footer>
+
 
     </div>
 
