--- a/javascript/class-notes/js-03-Operators_Conditionals/index.html
+++ b/javascript/class-notes/js-03-Operators_Conditionals/index.html
@@ -10,5 +10,6 @@
     <!-- <script src="./1-Operators.js"></script> -->
     <!-- <script src="./2-if-elseif-else.js"></script> -->
     <script src="./4-ternary.js"></script>
+    <script src="./5-switch-case.js"></script>
 </body>
 </html>
