--- a/javascript/class-notes/js-04-Loops/index.html
+++ b/javascript/class-notes/js-04-Loops/index.html
@@ -6,7 +6,8 @@
     <title>LOOPS</title>
 </head>
 <body>
-    <script src="./1-forLoops.js"></script>
-    <script src="./2-whileLoop.js"></script>
+    <!-- <script src="./1-forLoops.js"></script>
+    <script src="./2-whileLoop.js"></script> -->
+    <script src="./3-do-while.js"></script>
 </body>
 </html>
