--- a/javascript/class-notes/js-05-Functions/index.html
+++ b/javascript/class-notes/js-05-Functions/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>FUNCTIONS</h1>
-    <script src="./1-functionDecleration.js"></script>
+    <!-- <script src="./1-functionDecleration.js"></script> -->
+    <!-- <script src="./2-functionExpression.js"></script> -->
+    <!-- <script src="./3-ArrowFunction.js"></script> -->
+    <!-- <script src="./4-resursiveFunction.js"></script> -->
+    <script src="./5-IIFE.js"></script>
+
 </body>
 </html>
