--- a/html-css/hc14-Boostrap-2/index.html
+++ b/html-css/hc14-Boostrap-2/index.html
@@ -11,6 +11,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <!-- ----------------------------------------------------------------------- -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -105,30 +110,30 @@
           <img src="./img/slider2.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <div class="hero">
-                <em>Welcome to cafeharvey.com</em>
-                <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
-                <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
-                <div class="btn-container">
-                  <button class="btn rounded-pill me-3">Our Story</button>
-                  <button class="btn rounded-pill">Check Menu</button>
-                </div>
+              <em>Welcome to cafeharvey.com</em>
+              <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
+              <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+              <div class="btn-container">
+                <button class="btn rounded-pill me-3">Our Story</button>
+                <button class="btn rounded-pill">Check Menu</button>
               </div>
-              <div class="black rounded-5"></div>
+            </div>
+            <div class="black rounded-5"></div>
           </div>
         </div>
         <div class="carousel-item">
           <img src="./img/slider3.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <div class="hero">
-                <em>Welcome to cafeharvey.com</em>
-                <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
-                <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
-                <div class="btn-container">
-                  <button class="btn rounded-pill me-3">Our Story</button>
-                  <button class="btn rounded-pill">Check Menu</button>
-                </div>
+              <em>Welcome to cafeharvey.com</em>
+              <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
+              <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+              <div class="btn-container">
+                <button class="btn rounded-pill me-3">Our Story</button>
+                <button class="btn rounded-pill">Check Menu</button>
               </div>
-              <div class="black rounded-5"></div>
+            </div>
+            <div class="black rounded-5"></div>
           </div>
         </div>
       </div>
@@ -157,42 +162,85 @@
     <!-- ----------------------------------------------------------------------- -->
 
     <section id="about" class="py-5">
-
-        <h1 class="text-center">ABOUT US</h1>
-        <div class="container">
-            <div class="row align-items-center justify-content-center gap-1">
-                <div class="col  col-sm-12 col-md-6 ">
-                    <div class="image-container rounded-5 overflow-hidden mt-4 ">
-                        <img src="./img/about.jpg" alt="">
-                        <div class="about-info d-flex flex-column justify-content-end  p-3">
-                            <h4 class="fw-bold">We start since 2019</h4>
-                            <h4>Best in Dublin</h4>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col  col-sm-12 col-md-5">
-                    <em class="pt-5">cafeharvey.com</em>
-                    <h2 class="fs-4 mb-3">
-                      The café, a cherished establishment among the townsfolk, had
-                      existed for as long as anyone could recall.
-                    </h2>
-                    <p class="fs-14">
-                      Managed by the warm and welcoming Mr. and Mrs. Watson, Harvey Cafe
-                      operated under their guidance, offering a cozy atmosphere to its
-                      patrons. This establishment benefits from the support of a free
-                      Bootstrap 5 HTML layout.
-                    </p>
-                    <button class="btn">Meet Harvey</button>
-                </div>
+      <h1 class="text-center">ABOUT US</h1>
+      <div class="container">
+        <div class="row align-items-center justify-content-center gap-1">
+          <div class="col col-sm-12 col-md-6">
+            <div class="image-container rounded-5 overflow-hidden mt-4">
+              <img src="./img/about.jpg" alt="" />
+              <div
+                class="about-info d-flex flex-column justify-content-end p-3"
+              >
+                <h4 class="fw-bold">We start since 2019</h4>
+                <h4>Best in Dublin</h4>
+              </div>
             </div>
+          </div>
+          <div class="col col-sm-12 col-md-5">
+            <em class="pt-5">cafeharvey.com</em>
+            <h2 class="fs-4 mb-3">
+              The café, a cherished establishment among the townsfolk, had
+              existed for as long as anyone could recall.
+            </h2>
+            <p class="fs-14">
+              Managed by the warm and welcoming Mr. and Mrs. Watson, Harvey Cafe
+              operated under their guidance, offering a cozy atmosphere to its
+              patrons. This establishment benefits from the support of a free
+              Bootstrap 5 HTML layout.
+            </p>
+            <button class="btn">Meet Harvey</button>
+          </div>
         </div>
-
+      </div>
     </section>
 
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                               MEET PEOPLE                               -->
+    <!-- ----------------------------------------------------------------------- -->
+    <section id="people" class="py-5">
+      <div class="people-header text-center text-white">
+        <em>Creative Barista</em>
+        <h2>MEET PEOPLE</h2>
+      </div>
 
+      <div class="container">
+        <div class="row">
+          <!-- xs - sm - m - lg - xl -->
+          <!-- ----------------------------------------------------------------------- -->
+          <div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+            <div class="card" style="width: 18rem">
+              <img
+                src="./img/team/our-team-1.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Aragorn</h5>
+                <h6>Manager</h6>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
 
-
+                <div class="d-flex justify-content-evenly">
+                  <a href="#" class="btn fs-5"
+                    ><i class="bi bi-linkedin"></i
+                  ></a>
+                  <a href="#" class="btn fs-5"
+                    ><i class="bi bi-twitter-x"></i
+                  ></a>
+                  <a href="#" class="btn fs-5"
+                    ><i class="bi bi-instagram"></i
+                  ></a>
+                  <a href="#" class="btn fs-5"><i class="bi bi-tiktok"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- ----------------------------------------------------------------------- -->
+        </div>
+      </div>
+    </section>
 
     <!-- ------------------------ Bootstrap JS linkleri ------------------------ -->
     <script
