--- a/html-css/hc14-Boostrap-2/index.html
+++ b/html-css/hc14-Boostrap-2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Cafe Harvey</title>
     <!-- ------------------------- Bootstrap Linkleri -------------------------- -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -695,6 +695,61 @@
         </div>
       </div>
     </section>
+
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                                 FOOTER                                  -->
+    <!-- ----------------------------------------------------------------------- -->
+<footer class="py-5">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-12 col-lg-4">
+        <p><em>Where to find us</em></p>
+              <a href="" class="text-dark"><i class="bi bi-geo-alt"></i>224 Park Drive Gotham City</a>
+                <div class="d-flex gap-5 mt-3 fs-4">
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-twitter-x"></i>
+                  <i class="bi bi-whatsapp"></i>
+                </div>
+      </div>
+
+      <div class="col-12 col-lg-4">
+        <p><strong>Phone:</strong>(+90)55555555555</p>
+        <p><strong>Email:</strong>harvey@clarusway.com</p>
+      </div>
+
+
+      <div class="col-12 col-lg-4">
+        <p><em>Opening Hours</em></p>
+             <p>Monday-Friday_______9:00 - 18:00</p>
+            <p>Sturday_____________11:00 - 16:30</p>
+            <p>Sunday______________Closed</p>
+      </div>   
+      </div>
+
+
+      <div class="text-center">
+        <p>Copyright &copy; Harvey Watcon</p>
+      </div>
+
+    </div>
+</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- ------------------------ Bootstrap JS linkleri ------------------------ -->
     <script
