--- a/javascript/class-notes/js-11_dom-intro/index.html
+++ b/javascript/class-notes/js-11_dom-intro/index.html
@@ -23,8 +23,8 @@
             <li id="html-li" class="list">HTML</li>
             <li class="list">CSS</li>
             <li id="js-li" class="list">Javascript</li>
-            <li class="list">React</li>
-            <li id="react-li" class="list">Django</li>
+            <li class="list">Django</li>
+            <li id="react-li" class="list">React</li>
           </ul>
         </section>
       </section>
