--- a/javascript/class-notes/js-11_dom-intro/index.html
+++ b/javascript/class-notes/js-11_dom-intro/index.html
@@ -29,7 +29,7 @@
         </section>
       </section>
     </main>
-    <script src="selectors.js"></script>
-    <!-- <script src="traversingDOM.js"></script> -->
+    <!-- <script src="selectors.js"></script> -->
+    <script src="traversingDOM.js"></script>
   </body>
 </html>
