--- a/javascript/class-notes/js-15-WalletApp/index.html
+++ b/javascript/class-notes/js-15-WalletApp/index.html
@@ -168,7 +168,7 @@
     <div
       class="container bg-warning-subtle w-50 border border-1 text-center mt-3"
     >
-      <button id="clear" class="btn btn-danger w-75 p-2 m-2">
+      <button id="temizle" class="btn btn-danger w-75 p-2 m-2">
         CLEAR ALL
       </button>
     </div>
